--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1410,6 +1410,10 @@
     "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
-    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy."
+    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
+    "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
+    "TabStreaming": "Streaming",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle."
 }
