--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "Live-TV",
     "TitleSync": "Synchronisation",
     "ButtonDonate": "Spenden",
+    "TitleNotifications": "Benachrichtigungen",
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
     "MessageErrorLoadingSupporterInfo": "Es trat ein Fehler beim laden der Unterst\u00fctzer-Informationen auf. Bitte versuchen Sie es sp\u00e4ter erneut.",
     "MessageLinkYourSupporterKey": "Verbinden Sie Ihren Unterst\u00fctzer-Schl\u00fcssel mit bis zu {0} Emby Connect Benutzern um kostenfreien Zugriff auf die folgenden Apps zu erhalten:",
@@ -178,8 +179,8 @@
     "OptionFriday": "Freitag",
     "OptionSaturday": "Samstag",
     "OptionEveryday": "T\u00e4glich",
-    "OptionWeekend": "Weekends",
-    "OptionWeekday": "Weekdays",
+    "OptionWeekend": "Wochenenden",
+    "OptionWeekday": "Wochentage",
     "HeaderConfirmDeletion": "Best\u00e4tige L\u00f6schung",
     "MessageConfirmPathSubstitutionDeletion": "Bist du dir sicher die Pfadsubstitution l\u00f6schen zu wollen?",
     "LiveTvUpdateAvailable": "(Update verf\u00fcgbar)",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "Trenne Medien ab",
     "MessageConfirmSplitMedia": "Bist du dir sicher, dass du die Medienquellen in separate Elemente aufteilen m\u00f6chtest?",
     "HeaderError": "Fehler",
+    "MessageChromecastConnectionError": "Ihr Chromecast kann keine Verbindung mit dem Emby Server herstellen. Bitte \u00fcberpr\u00fcfen Sie die Verbindung und probieren Sie es erneut.",
     "MessagePleaseSelectOneItem": "Bitte w\u00e4hle mindestens eine Option aus.",
     "MessagePleaseSelectTwoItems": "Bitte w\u00e4hle mindestens zwei Optionen aus.",
     "MessageTheFollowingItemsWillBeGrouped": "Die folgenden Titel werden zu einem Element gruppiert:",
