--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "TV en direct",
     "TitleSync": "Sync.",
     "ButtonDonate": "Faire un don",
+    "TitleNotifications": "Notifications",
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
     "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
     "MessageLinkYourSupporterKey": "Liez votre cl\u00e9 de supporteur avec un maximum de {0} membres Emby Connect pour b\u00e9n\u00e9ficier de l'acc\u00e8s gratuit aux applications suivantes :",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "S\u00e9parer les m\u00e9dias",
     "MessageConfirmSplitMedia": "\u00cates vous s\u00fbrs de vouloir diviser les sources de m\u00e9dia dans des items s\u00e9par\u00e9s ?",
     "HeaderError": "Erreur",
+    "MessageChromecastConnectionError": "Votre cl\u00e9 Chromecast ne peut pas se connecter \u00e0 votre serveur Emby. Veuillez v\u00e9rifier les connections et recommencer.",
     "MessagePleaseSelectOneItem": "Veuillez s\u00e9lectionner au moins un item.",
     "MessagePleaseSelectTwoItems": "Veuillez s\u00e9lectionner au moins deux items.",
     "MessageTheFollowingItemsWillBeGrouped": "Les titres suivants seront group\u00e9s en un seul item:",
