--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "Tv in diretta",
     "TitleSync": "Sincronizza",
     "ButtonDonate": "Donazione",
+    "TitleNotifications": "Notifiche",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -92,18 +93,18 @@
     "ButtonAddToCollection": "Aggiungi alla collezione",
     "HeaderSelectCertificatePath": "Seleziona il percorso del Certificato",
     "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
-    "HeaderSupporterBenefit": "L'iscrizione come supporter da benefici addizionali, come l'accesso alla sincronizzazione, i plugin premium, canali con contenuto internet, e altro. {0}Scopri di pi\u00f9{1}.",
+    "HeaderSupporterBenefit": "L'iscrizione come supporter garantisce benefici aggiuntivi, come l'accesso alla sincronizzazione, i plugin premium, canali con contenuto internet, e altro ancora. {0}Scopri di pi\u00f9{1}.",
     "LabelSyncNoTargetsHelp": "Sembra che al momento non avete applicazioni che supportano la sincronizzazione.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
-    "ButtonTakeTheTour": "Fai il tour",
+    "ButtonTakeTheTour": "Fai una visita",
     "HeaderWelcomeBack": "Ben tornato!",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Fai un tour per vedere cosa \u00e8 cambiato",
     "MessageNoSyncJobsFound": "Nessuna sincronizzazione pianificata. Creane una utilizzando i pulsanti sull'interfaccia web",
     "HeaderLibraryAccess": "Accesso libreria",
     "HeaderChannelAccess": "Accesso canali",
-    "HeaderDeviceAccess": "Accesso dispositivo",
+    "HeaderDeviceAccess": "Accesso al dispositivo",
     "HeaderSelectDevices": "Seleziona periferiche",
     "ButtonCancelItem": "Cancella oggetto",
     "ButtonQueueForRetry": "In attesa di riprovare",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "Dividi Media",
     "MessageConfirmSplitMedia": "Sei sicuro di voler dividere le fonti dei media in voci separate?",
     "HeaderError": "Errore",
+    "MessageChromecastConnectionError": "Your Chromecast receiver is unable to connect to your Emby Server. Please check their connections and try again.",
     "MessagePleaseSelectOneItem": "Si prega di selezionare almeno un elemento.",
     "MessagePleaseSelectTwoItems": "Seleziona almeno due elementi.",
     "MessageTheFollowingItemsWillBeGrouped": "I seguenti titoli saranno raggruppati in un unico elemento:",
