--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "\u7535\u89c6\u76f4\u64ad",
     "TitleSync": "\u540c\u6b65",
     "ButtonDonate": "\u6350\u8d60",
+    "TitleNotifications": "\u901a\u77e5",
     "ErrorLaunchingChromecast": "\u542f\u52a8chromecast\u9047\u5230\u9519\u8bef\uff0c\u8bf7\u786e\u8ba4\u8bbe\u5907\u5df2\u7ecf\u8fde\u63a5\u5230\u4f60\u7684\u65e0\u7ebf\u7f51\u7edc\u3002",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -121,7 +122,7 @@
     "LabelFree": "\u514d\u8d39",
     "HeaderPlaybackError": "Playback Error",
     "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later or contact your system administrator for details.",
     "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "\u9009\u62e9\u97f3\u9891",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "\u62c6\u5206\u5a92\u4f53",
     "MessageConfirmSplitMedia": "\u60a8\u786e\u5b9a\u8981\u628a\u5a92\u4f53\u6e90\u62c6\u5206\u4e3a\u5355\u72ec\u7684\u9879\u76ee\uff1f",
     "HeaderError": "\u9519\u8bef",
+    "MessageChromecastConnectionError": "Your Chromecast receiver is unable to connect to your Emby Server. Please check their connections and try again.",
     "MessagePleaseSelectOneItem": "\u8bf7\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u9879\u76ee\u3002",
     "MessagePleaseSelectTwoItems": "\u8bf7\u81f3\u5c11\u9009\u62e92\u4e2a\u9879\u76ee\u3002",
     "MessageTheFollowingItemsWillBeGrouped": "\u4ee5\u4e0b\u6807\u9898\u5c06\u88ab\u5f52\u5165\u4e00\u4e2a\u9879\u76ee\uff1a",
