--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -52,8 +52,8 @@
     "HeaderAddUser": "Benutzer hinzuf\u00fcgen",
     "LabelAddConnectSupporterHelp": "Um einen Benutzer hinzuzuf\u00fcgen, der nicht angezeigt wird, m\u00fcssen Sie diesen erst mit Emby Connect von seinem Benutzerprofil verbinden.",
     "LabelPinCode": "PIN Code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
+    "OptionHideWatchedContentFromLatestMedia": "Verberge gesehene Inhalte von zuletzt hinzugef\u00fcgten.",
+    "HeaderSync": "Synchronisiere",
     "ButtonOk": "Ok",
     "ButtonCancel": "Abbrechen",
     "ButtonExit": "Exit",
@@ -169,7 +169,7 @@
     "MessageNothingHere": "Nichts hier.",
     "MessagePleaseEnsureInternetMetadata": "Bitte sicherstellen, dass das Herunterladen von Internet Metadaten aktiviert ist.",
     "TabSuggested": "Vorgeschlagen",
-    "TabSuggestions": "Suggestions",
+    "TabSuggestions": "Empfehlungen",
     "TabLatest": "Neueste",
     "TabUpcoming": "Bevorstehend",
     "TabShows": "Serien",
@@ -905,7 +905,7 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Meistgesehen",
     "TabNextUp": "Als N\u00e4chstes",
-    "PlaceholderUsername": "Username",
+    "PlaceholderUsername": "Benutzername",
     "HeaderBecomeProjectSupporter": "Werden Sie Emby Unterst\u00fctzer",
     "MessageNoMovieSuggestionsAvailable": "Momentan sind keine Filmvorschl\u00e4ge verf\u00fcgbar. Schaue und bewerte zuerst deine Filme. Komme danach zur\u00fcck, um deine Filmvorschl\u00e4ge anzuschauen.",
     "MessageNoCollectionsAvailable": "Sammlungen erlauben Ihnen eine personalisierte Gruppierung von Filmen, Serien, Alben, B\u00fcchern und Spielen. Klicken Sie die + Schaltfl\u00e4che um Sammlungen zu erstellen.",
@@ -1384,16 +1384,24 @@
     "LabelEnableInternetMetadataForTvPrograms": "Lade Internet Metadaten f\u00fcr:",
     "OptionTVMovies": "TV Filme",
     "HeaderUpcomingMovies": "Bevorstehende Filme",
-    "HeaderUpcomingSports": "Upcoming Sports",
+    "HeaderUpcomingSports": "Folgende Sportveranstaltungen",
     "HeaderUpcomingPrograms": "Bevorstehende Programme",
     "ButtonMoreItems": "Mehr...",
     "LabelShowLibraryTileNames": "Zeige Bibliothek Kachelnamen.",
     "LabelShowLibraryTileNamesHelp": "Legen Sie fest, ob Beschriftungen unter den Kacheln der Startseite angezeigt werden sollen.",
     "OptionEnableTranscodingThrottle": "aktiviere Drosselung",
     "OptionEnableTranscodingThrottleHelp": "Die Drosselung justiert die Transkodier-Geschwindigkeit, um die Server CPU Auslastung w\u00e4hrend der Wiedergabe zu minimieren.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
-    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
-    "HeaderPlayback": "Media Playback",
-    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
+    "LabelUploadSpeedLimit": "Upload Geschwindigkeitslimit (mbps):",
+    "OptionAllowSyncTranscoding": "Erlaube Synchronisation die Transkodierung ben\u00f6tigen",
+    "HeaderPlayback": "Medien Wiedergabe",
+    "OptionAllowAudioPlaybackTranscoding": "Erlaube Audio-Wiedergabe die Transkodierung ben\u00f6tigt",
+    "OptionAllowVideoPlaybackTranscoding": "Erlaube Video-Wiedergabe die Transkodierung ben\u00f6tigt",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Benutzer erhalten aussagekr\u00e4ftige Fehlermeldungen gem\u00e4\u00df den Einstellungen, wenn Medien nicht wiedergegeben werden k\u00f6nnen.",
+    "TabStreaming": "Streaming",
+    "LabelRemoteClientBitrateLimit": "Limitierte Client-Fernzugriff Datenrate (in mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "Eine optionale Streaming Datengrenze f\u00fcr alle Clients mit Fernzugriff. Dies verhindert, dass Clients eine h\u00f6here Bandbreite als die zur Verf\u00fcgung stehende Verbindung, anfragen.",
+    "LabelConversionCpuCoreLimit": "CPU Kerne Limit:",
+    "LabelConversionCpuCoreLimitHelp": "Begrenzt die Anzahl der verwendeten CPU Kerne w\u00e4hrend der Konvertierung f\u00fcr die Synchronisation.",
+    "OptionEnableFullSpeedConversion": "Aktiviere Hochleistung-Konvertierung.",
+    "OptionEnableFullSpeedConversionHelp": "In der Grundeinstellung wird die Konvertierung f\u00fcr die Synchronisation mit niedriger Geschwindigkeit durchgef\u00fchrt und spart damit System Ressourcen."
 }
