--- a/MediaBrowser.Server.Implementations/Localization/Server/el.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/el.json
@@ -334,8 +334,8 @@
     "OptionRelease": "\u0397 \u03b5\u03c0\u03af\u03c3\u03b7\u03bc\u03b7 \u03ad\u03ba\u03b4\u03bf\u03c3\u03b7",
     "OptionBeta": "\u0394\u03bf\u03ba\u03b9\u03bc\u03b1\u03c3\u03c4\u03b9\u03ba\u03ae",
     "OptionDev": "\u0391\u03bd\u03ac\u03c0\u03c4\u03c5\u03be\u03b7 (\u03b1\u03c3\u03c4\u03b1\u03b8\u03ae\u03c2)",
-    "LabelAllowServerAutoRestart": "Allow the server to restart automatically to apply updates",
-    "LabelAllowServerAutoRestartHelp": "The server will only restart during idle periods, when no users are active.",
+    "LabelAllowServerAutoRestart": "\u0391\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03b7 \u03b5\u03c0\u03b1\u03bd\u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c3\u03ad\u03c1\u03b2\u03b5\u03c1 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b5\u03b3\u03ba\u03b1\u03c4\u03b1\u03c3\u03c4\u03ae\u03c3\u03b5\u03b9 \u03c4\u03b9\u03c2 \u03b1\u03bd\u03b1\u03b2\u03b1\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2",
+    "LabelAllowServerAutoRestartHelp": "\u039f \u03a3\u03b5\u03c1\u03b2\u03b5\u03c1 \u03b8\u03b1 \u03ba\u03ac\u03bd\u03b5\u03b9 \u03bc\u03cc\u03bd\u03bf \u03b5\u03c0\u03b1\u03bd\u03b5\u03ba\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c4\u03b9\u03c2 \u03bc\u03b7 \u03b5\u03bd\u03b5\u03c1\u03b3\u03ad\u03c2 \u03c0\u03b5\u03c1\u03b9\u03cc\u03b4\u03bf\u03c5\u03c2, \u03cc\u03c4\u03b1\u03bd \u03ba\u03b1\u03bd\u03b5\u03af\u03c2 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7\u03c2 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03bd\u03b5\u03c1\u03b3\u03cc\u03c2.",
     "LabelEnableDebugLogging": "Enable debug logging",
     "LabelRunServerAtStartup": "\u039e\u03b5\u03ba\u03af\u03bd\u03b7\u03c3\u03b5 \u03c4\u03bf\u03bd \u03a3\u03b5\u03c1\u03b2\u03b5\u03c1 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7",
     "LabelRunServerAtStartupHelp": "This will start the tray icon on windows startup. To start the windows service, uncheck this and run the service from the windows control panel. Please note that you cannot run both at the same time, so you will need to exit the tray icon before starting the service.",
@@ -433,65 +433,65 @@
     "OptionDownloadDiscImage": "Disc",
     "OptionDownloadBannerImage": "Banner",
     "OptionDownloadBackImage": "Back",
-    "OptionDownloadArtImage": "Art",
-    "OptionDownloadPrimaryImage": "Primary",
+    "OptionDownloadArtImage": "\u03a4\u03ad\u03c7\u03bd\u03b7",
+    "OptionDownloadPrimaryImage": "\u03a0\u03c1\u03ce\u03c4\u03bf",
     "HeaderFetchImages": "Fetch Images:",
-    "HeaderImageSettings": "Image Settings",
-    "TabOther": "Other",
+    "HeaderImageSettings": "\u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2 \u0395\u03b9\u03ba\u03cc\u03bd\u03b1\u03c2",
+    "TabOther": "\u0386\u03bb\u03bb\u03b1",
     "LabelMaxBackdropsPerItem": "Maximum number of backdrops per item:",
     "LabelMaxScreenshotsPerItem": "Maximum number of screenshots per item:",
     "LabelMinBackdropDownloadWidth": "Minimum backdrop download width:",
     "LabelMinScreenshotDownloadWidth": "Minimum screenshot download width:",
     "ButtonAddScheduledTaskTrigger": "Add Trigger",
     "HeaderAddScheduledTaskTrigger": "Add Trigger",
-    "ButtonAdd": "Add",
+    "ButtonAdd": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c3\u03b5",
     "LabelTriggerType": "Trigger Type:",
-    "OptionDaily": "Daily",
-    "OptionWeekly": "Weekly",
+    "OptionDaily": "\u039a\u03b1\u03b8\u03b7\u03bc\u03b5\u03c1\u03b9\u03bd\u03ac",
+    "OptionWeekly": "\u0395\u03b2\u03b4\u03bf\u03bc\u03b1\u03b4\u03b9\u03b1\u03af\u03b1",
     "OptionOnInterval": "On an interval",
     "OptionOnAppStartup": "On application startup",
     "OptionAfterSystemEvent": "After a system event",
-    "LabelDay": "Day:",
-    "LabelTime": "Time:",
-    "LabelEvent": "Event:",
-    "OptionWakeFromSleep": "Wake from sleep",
-    "LabelEveryXMinutes": "Every:",
+    "LabelDay": "\u0397\u03bc\u03ad\u03c1\u03b1:",
+    "LabelTime": "\u038f\u03c1\u03b1:",
+    "LabelEvent": "\u0393\u03b5\u03b3\u03bf\u03bd\u03cc\u03c2:",
+    "OptionWakeFromSleep": "\u0395\u03c0\u03b1\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b7",
+    "LabelEveryXMinutes": "\u039a\u03ac\u03b8\u03b5:",
     "HeaderTvTuners": "Tuners",
     "HeaderGallery": "Gallery",
-    "HeaderLatestGames": "Latest Games",
-    "HeaderRecentlyPlayedGames": "Recently Played Games",
+    "HeaderLatestGames": "\u03a4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u03b1 \u03a0\u03b1\u03b9\u03c7\u03bd\u03af\u03b4\u03b9\u03b1",
+    "HeaderRecentlyPlayedGames": "\u03a4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u03b1 \u03a0\u03b1\u03b9\u03c7\u03bd\u03af\u03b4\u03b9\u03b1 \u03c0\u03bf\u03c5 \u03c0\u03b1\u03af\u03c7\u03c4\u03b7\u03ba\u03b1\u03bd",
     "TabGameSystems": "Game Systems",
-    "TitleMediaLibrary": "Media Library",
-    "TabFolders": "Folders",
+    "TitleMediaLibrary": "\u0392\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7 \u03a0\u03bf\u03bb\u03c5\u03bc\u03ad\u03c3\u03c9\u03bd",
+    "TabFolders": "\u03a6\u03ac\u03ba\u03b5\u03bb\u03bf\u03b9",
     "TabPathSubstitution": "Path Substitution",
     "LabelSeasonZeroDisplayName": "Season 0 display name:",
     "LabelEnableRealtimeMonitor": "Enable real time monitoring",
     "LabelEnableRealtimeMonitorHelp": "Changes will be processed immediately, on supported file systems.",
-    "ButtonScanLibrary": "Scan Library",
-    "HeaderNumberOfPlayers": "Players:",
-    "OptionAnyNumberOfPlayers": "Any",
+    "ButtonScanLibrary": "\u03a8\u03ac\u03be\u03b5 \u0392\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7",
+    "HeaderNumberOfPlayers": "\u03a0\u03c1\u03bf\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03b1 \u0391\u03bd\u03b1\u03c0\u03b1\u03c1\u03b1\u03b3\u03c9\u03b3\u03ae\u03c2:",
+    "OptionAnyNumberOfPlayers": "\u038c\u03bb\u03b1",
     "Option1Player": "1+",
     "Option2Player": "2+",
     "Option3Player": "3+",
     "Option4Player": "4+",
-    "HeaderMediaFolders": "Media Folders",
-    "HeaderThemeVideos": "Theme Videos",
-    "HeaderThemeSongs": "Theme Songs",
-    "HeaderScenes": "Scenes",
-    "HeaderAwardsAndReviews": "Awards and Reviews",
-    "HeaderSoundtracks": "Soundtracks",
-    "HeaderMusicVideos": "Music Videos",
-    "HeaderSpecialFeatures": "Special Features",
-    "HeaderCastCrew": "Cast & Crew",
-    "HeaderAdditionalParts": "Additional Parts",
+    "HeaderMediaFolders": "\u03a6\u03ac\u03ba\u03b5\u03bb\u03bf\u03b9 \u03a0\u03bf\u03bb\u03c5\u03bc\u03ad\u03c3\u03c9\u03bd",
+    "HeaderThemeVideos": "\u0398\u03b5\u03bc\u03b1\u03c4\u03b9\u03ba\u03ac \u0392\u03af\u03bd\u03c4\u03b5\u03bf",
+    "HeaderThemeSongs": "\u0398\u03b5\u03bc\u03b1\u03c4\u03b9\u03ba\u03ac \u03a4\u03c1\u03b1\u03b3\u03bf\u03cd\u03b4\u03b9\u03b1",
+    "HeaderScenes": "\u03a3\u03ba\u03b7\u03bd\u03ad\u03c2",
+    "HeaderAwardsAndReviews": "\u0392\u03c1\u03b1\u03b2\u03b5\u03af\u03b1 \u03ba\u03b1\u03b9 \u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1",
+    "HeaderSoundtracks": "\u039c\u03bf\u03c5\u03c3\u03b9\u03ba\u03ae \u03a4\u03b1\u03b9\u03bd\u03af\u03b1\u03c2",
+    "HeaderMusicVideos": "\u0392\u03af\u03bd\u03c4\u03b5\u03bf \u039c\u03bf\u03c5\u03c3\u03b9\u03ba\u03ae\u03c2",
+    "HeaderSpecialFeatures": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c4\u03b5\u03c2 \u03a3\u03ba\u03b7\u03bd\u03ad\u03c2",
+    "HeaderCastCrew": "\u0397\u03b8\u03bf\u03c0\u03bf\u03b9\u03bf\u03af \u03ba\u03b1\u03b9 \u03c3\u03c5\u03bd\u03b5\u03c1\u03b3\u03b5\u03af\u03bf",
+    "HeaderAdditionalParts": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c4\u03b1 \u039c\u03ad\u03c1\u03b7",
     "ButtonSplitVersionsApart": "Split Versions Apart",
     "ButtonPlayTrailer": "Trailer",
     "LabelMissing": "Missing",
-    "LabelOffline": "Offline",
+    "LabelOffline": "\u0395\u03ba\u03c4\u03cc\u03c2",
     "PathSubstitutionHelp": "Path substitutions are used for mapping a path on the server to a path that clients are able to access. By allowing clients direct access to media on the server they may be able to play them directly over the network and avoid using server resources to stream and transcode them.",
-    "HeaderFrom": "From",
+    "HeaderFrom": "\u0391\u03c0\u03cc",
     "HeaderTo": "To",
-    "LabelFrom": "From:",
+    "LabelFrom": "\u0391\u03c0\u03cc:",
     "LabelFromHelp": "Example: D:\\Movies (on the server)",
     "LabelTo": "To:",
     "LabelToHelp": "Example: \\\\MyServer\\Movies (a path clients can access)",
@@ -1394,6 +1394,14 @@
     "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
-    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
+    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
+    "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
+    "TabStreaming": "Streaming",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
+    "LabelConversionCpuCoreLimit": "CPU core limit:",
+    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
+    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
+    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
 }
