--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -1384,16 +1384,24 @@
     "LabelEnableInternetMetadataForTvPrograms": "T\u00e9l\u00e9charger les m\u00e9ta-donn\u00e9es depuis Internet pour :",
     "OptionTVMovies": "T\u00e9l\u00e9films",
     "HeaderUpcomingMovies": "Films \u00e0 venir",
-    "HeaderUpcomingSports": "Upcoming Sports",
+    "HeaderUpcomingSports": "Ev\u00e9nements sportifs \u00e0 venir",
     "HeaderUpcomingPrograms": "Programmes \u00e0 venir",
     "ButtonMoreItems": "Plus...",
     "LabelShowLibraryTileNames": "Voir les noms des affiches de la biblioth\u00e8que",
     "LabelShowLibraryTileNamesHelp": "D\u00e9termine si les noms doivent \u00eatre affich\u00e9s en dessous des affiches de la biblioth\u00e8que sur la page d'accueil",
     "OptionEnableTranscodingThrottle": "Activer le throttling",
     "OptionEnableTranscodingThrottleHelp": "Le throttling consiste \u00e0 ajuster automatiquement la fr\u00e9quence de transcodage afin de minimiser l'utilisation CPU pendant la lecture.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
-    "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
-    "HeaderPlayback": "Media Playback",
-    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
+    "LabelUploadSpeedLimit": "D\u00e9bit max d'upload (mbps) :",
+    "OptionAllowSyncTranscoding": "Autoriser la synchronisation quand elle n\u00e9cessite un transcodage",
+    "HeaderPlayback": "Lecture du m\u00e9dia",
+    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
+    "OptionAllowVideoPlaybackTranscoding": "Autoriser la lecture de vid\u00e9os n\u00e9cessitant le transcodage",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Les utilisateurs recevront un message d'erreur compr\u00e9hensible lorsque le contenu n'est pas lisible en raison des restrictions appliqu\u00e9es",
+    "TabStreaming": "Streaming",
+    "LabelRemoteClientBitrateLimit": "Limite de d\u00e9bit du client distant (mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
+    "LabelConversionCpuCoreLimit": "Limite de coeur CPU:",
+    "LabelConversionCpuCoreLimitHelp": "Limite le nombre de coeur du processeur utilis\u00e9s pendant la conversion.",
+    "OptionEnableFullSpeedConversion": "Autoriser le transcodage rapide",
+    "OptionEnableFullSpeedConversionHelp": "Par d\u00e9faut, le transcodage est r\u00e9alis\u00e9 de mani\u00e8re lente pour r\u00e9duire la consommation de ressources."
 }
