--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/el.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/el.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "Live TV",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
+    "TitleNotifications": "\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -121,7 +122,7 @@
     "LabelFree": "Free",
     "HeaderPlaybackError": "Playback Error",
     "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
+    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later or contact your system administrator for details.",
     "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
     "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
     "HeaderSelectAudio": "Select Audio",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "Split Media Apart",
     "MessageConfirmSplitMedia": "Are you sure you wish to split the media sources into separate items?",
     "HeaderError": "Error",
+    "MessageChromecastConnectionError": "Your Chromecast receiver is unable to connect to your Emby Server. Please check their connections and try again.",
     "MessagePleaseSelectOneItem": "Please select at least one item.",
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
@@ -225,7 +227,7 @@
     "HeaderSelectChannelDownloadPath": "Select Channel Download Path",
     "HeaderSelectChannelDownloadPathHelp": "Browse or enter the path to use for storing channel cache files. The folder must be writeable.",
     "OptionNewCollection": "New...",
-    "ButtonAdd": "Add",
+    "ButtonAdd": "\u03a0\u03c1\u03cc\u03c3\u03b8\u03b5\u03c3\u03b5",
     "ButtonRemove": "Remove",
     "LabelChapterDownloaders": "Chapter downloaders:",
     "LabelChapterDownloadersHelp": "Enable and rank your preferred chapter downloaders in order of priority. Lower priority downloaders will only be used to fill in missing information.",
@@ -286,7 +288,7 @@
     "ButtonShuffle": "Shuffle",
     "ButtonInstantMix": "Instant mix",
     "ButtonResume": "Resume",
-    "HeaderScenes": "Scenes",
+    "HeaderScenes": "\u03a3\u03ba\u03b7\u03bd\u03ad\u03c2",
     "HeaderAudioTracks": "Audio Tracks",
     "HeaderLibraries": "Libraries",
     "HeaderSubtitles": "Subtitles",
@@ -305,7 +307,7 @@
     "LabelAddedOnDate": "Added {0}",
     "ButtonStart": "Start",
     "HeaderChannels": "\u039a\u03b1\u03bd\u03ac\u03bb\u03b9\u03b1",
-    "HeaderMediaFolders": "Media Folders",
+    "HeaderMediaFolders": "\u03a6\u03ac\u03ba\u03b5\u03bb\u03bf\u03b9 \u03a0\u03bf\u03bb\u03c5\u03bc\u03ad\u03c3\u03c9\u03bd",
     "HeaderBlockItemsWithNoRating": "Block content with no rating information:",
     "OptionBlockOthers": "Others",
     "OptionBlockTvShows": "TV Shows",
