--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "TV en Vivo",
     "TitleSync": "Sinc",
     "ButtonDonate": "Donar",
+    "TitleNotifications": "Notificaciones",
     "ErrorLaunchingChromecast": "Hubo un error iniciando chromecast. Por favor aseg\u00farate de que tu dispositivo este conectado a tu red inalambrica",
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
     "MessageLinkYourSupporterKey": "Enlaza tu clave de aficionado con hasta {0} miembros de Emby Connect para disfrutar de acceso gratuito a la siguientes aplicaciones:",
@@ -121,7 +122,7 @@
     "LabelFree": "Gratis",
     "HeaderPlaybackError": "Error de Reproducci\u00f3n",
     "MessagePlaybackErrorNotAllowed": "Actualmente no esta autorizado para reproducir este contenido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
-    "MessagePlaybackErrorNoCompatibleStream": "No hay streams compatibles en este en este momento. Por favor intente de nuevo mas tarde.",
+    "MessagePlaybackErrorNoCompatibleStream": "No hay streams compatibles en este en este momento. Por favor intente de nuevo mas tarde o contacte a su administrador de sistema para mas detalles.",
     "MessagePlaybackErrorRateLimitExceeded": "Su limite de transferencia ha sido excedido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
     "MessagePlaybackErrorPlaceHolder": "No es posible reproducir el contenido seleccionado en este dispositivo.",
     "HeaderSelectAudio": "Seleccionar Audio",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "Dividir y Separar Medios",
     "MessageConfirmSplitMedia": "\u00bfEst\u00e1 seguro de querer dividir y separar estos medios en elementos individuales?",
     "HeaderError": "Error",
+    "MessageChromecastConnectionError": "Su receptor Chromecast no puede conectarse con su Servidor Emby. Por favor revise las conexiones e intent\u00e9lo nuevamente.",
     "MessagePleaseSelectOneItem": "Por favor selecciona al menos un elemento.",
     "MessagePleaseSelectTwoItems": "Por favor selecciona al menos dos elementos.",
     "MessageTheFollowingItemsWillBeGrouped": "Los siguientes t\u00edtulos ser\u00e1n agrupados en un solo elemento.",
