--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -40,6 +40,7 @@
     "TitleLiveTV": "TV ao Vivo",
     "TitleSync": "Sinc",
     "ButtonDonate": "Doar",
+    "TitleNotifications": "Notifica\u00e7\u00f5es",
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "MessageErrorLoadingSupporterInfo": "Ocorreu um erro ao carregar a informa\u00e7\u00e3o do colaborador. Por favor, tente novamente mais tarde.",
     "MessageLinkYourSupporterKey": "Associe sua chave de colaborador com at\u00e9 {0} membros do Emby Connect para desfrutar acesso gr\u00e1tis \u00e0s seguintes apps:",
@@ -121,7 +122,7 @@
     "LabelFree": "Gr\u00e1tis",
     "HeaderPlaybackError": "Erro na Reprodu\u00e7\u00e3o",
     "MessagePlaybackErrorNotAllowed": "Voc\u00ea n\u00e3o est\u00e1 autorizado a reproduzir este conte\u00fado. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
-    "MessagePlaybackErrorNoCompatibleStream": "N\u00e3o existem streams compat\u00edveis dispon\u00edveis. Por favor, tente novamente mais tarde.",
+    "MessagePlaybackErrorNoCompatibleStream": "N\u00e3o existem streams compat\u00edveis. Por favor, tente novamente mais tarde ou contate o administrador do sistema para mais detalhes.",
     "MessagePlaybackErrorRateLimitExceeded": "Seu limite da taxa de reprodu\u00e7\u00e3o foi excedido. Por favor, entre em contato com o administrador do sistema para mais detalhes.",
     "MessagePlaybackErrorPlaceHolder": "O conte\u00fado escolhido n\u00e3o \u00e9 reproduz\u00edvel neste dispositivo.",
     "HeaderSelectAudio": "Selecione \u00c1udio",
@@ -197,6 +198,7 @@
     "HeaderSplitMedia": "Separar M\u00eddia",
     "MessageConfirmSplitMedia": "Deseja realmente dividir as fontes de m\u00eddia em itens separados?",
     "HeaderError": "Erro",
+    "MessageChromecastConnectionError": "Seu receptor Chromecast n\u00e3o pode se conectar com seu Servidor Emby. Por favor, verifique suas conex\u00f5es e tente novamente.",
     "MessagePleaseSelectOneItem": "Por favor selecione pelo menos um item.",
     "MessagePleaseSelectTwoItems": "Por favor selecione pelo menos dois itens.",
     "MessageTheFollowingItemsWillBeGrouped": "Os seguintes t\u00edtulos ser\u00e3o agrupados em um \u00fanico item:",
