--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -1394,6 +1394,14 @@
     "LabelUploadSpeedLimit": "L\u00edmite de velocidad de env\u00edo (mbps):",
     "OptionAllowSyncTranscoding": "Permitir sincronizaci\u00f3n que requiera de transcodificaci\u00f3n",
     "HeaderPlayback": "Reproducci\u00f3n de Medios",
-    "OptionAllowMediaPlaybackTranscoding": "Permitir reproducci\u00f3n de medios que requiera de transcodificaci\u00f3n",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Los usuarios recibir\u00e1n mensajes de error amigables cuando el contenido no pueda ser reproducido de acuerdo a su pol\u00edtica."
+    "OptionAllowAudioPlaybackTranscoding": "Permitir la reproducci\u00f3n de audio que requiera de transcodificaci\u00f3n",
+    "OptionAllowVideoPlaybackTranscoding": "Permitir la reproducci\u00f3n de video que requiera de transcodificaci\u00f3n",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Los usuarios recibir\u00e1n mensajes amigables cuando el contenido no pueda ser reproducido de acuerdo a su pol\u00edtica.",
+    "TabStreaming": "Transmisi\u00f3n",
+    "LabelRemoteClientBitrateLimit": "Limite de tasa de bits (Mbps) del cliente remoto:",
+    "LabelRemoteClientBitrateLimitHelp": "L\u00edmite opcional en la tasa de bits de transmisi\u00f3n para todos los clientes remotos. Esto es \u00fatil para evitar que los clientes soliciten una tasa de bits mayor a la que su conexi\u00f3n puede soportar.",
+    "LabelConversionCpuCoreLimit": "CPU core limit:",
+    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
+    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
+    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
 }
