--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -1394,6 +1394,14 @@
     "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
-    "OptionAllowMediaPlaybackTranscoding": "Allow media playback that requires transcoding",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly error messages when content is unplayable based on their policy."
+    "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
+    "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
+    "TabStreaming": "Streaming",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
+    "LabelConversionCpuCoreLimit": "CPU core limit:",
+    "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
+    "OptionEnableFullSpeedConversion": "Enable full speed conversion",
+    "OptionEnableFullSpeedConversionHelp": "By default sync conversion is performed at a low speed to reduce resource consumption."
 }
