rework server sync

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -964,6 +964,7 @@
     "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
+    "ViewTypeMusicPlaylists": "Playlists",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
